--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Akhlaqur Rahman</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,12 +11,12 @@
   </head>
   <body>
 <div class="top-container">
-  <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+  <img class="top-cloud" src="cloud.png" alt="cloud-img">
 
   <h1>I am Akhlaq.</h1>
   <h2>a <span class="pro">pro</span>grammer</h2>
-  <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-  <img src="images/mountain.jpeg" alt="mountain-img">
+  <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
+  <img src="mountain.jpeg" alt="mountain-img">
 </div>
 
 
