--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <div class="middle-container">
   <div class="profile">
-    <img src="images/Akhlaqur.png" alt="Akhalqur-img" height="200px" width="200px">
+    <img src="Akhlaqur.png" alt="Akhalqur-img" height="200px" width="200px">
     <h2>Hello.</h2>
     <p class="intro">An aspiring mind presently a student of B.Tech, CSE at BPPIMT,Kolkata.
          I am a person with diverse interests, ranging from reading books, to watching movies:
