--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <hr>
   <div class="contact-me">
     <h2>Get In Touch</h2>
-    <h3>Want to know more about me</h3>
+    <h3>Want to know about me</h3>
     <p class="contact-message" >You Can Find Me on LinkedIn And Contact Lets Catch up Sometime</p>
     <a class="btn" href="">CONTACT ME</a>
   </div>
