--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <div class="bottom-container">
   <a class="footer-link" href="https://www.linkedin.com/in/akhlaqur-rahman-7068611a6/">LinkedIn</a>
-  <a class="footer-link" href="https://twitter.com/">Twitter</a>
+  <a class="footer-link" href="https://www.hackerrank.com/akhlaqur789">HackerRank</a>
   <a class="footer-link" href="">Website</a>
   <p class="copyright">Akhalqur</p>
 </div>
