--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <div class="bottom-container">
   <a class="footer-link" href="https://www.linkedin.com/in/akhlaqur-rahman-7068611a6/">LinkedIn</a>
   <a class="footer-link" href="https://www.hackerrank.com/akhlaqur789">HaackerRank</a>
-  <a class="footer-link" href="">Website</a>
+  <a class="footer-link" href="https://auth.geeksforgeeks.org/user/akhlaqur789">Geeksforgeeks</a>
   <p class="copyright">Akhalqur</p>
 </div>
 
