--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="skill-row">
       <img class="code-img" src="https://media0.giphy.com/media/26n7b7PjSOZJwVCmY/giphy.webp?cid=ecf05e47aj9vfaav1m65x79hdl84a7reu11ffhyipyhx0t0j&rid=giphy.webp&ct=g" alt="prog-img">
       <h3>Web Development</h3>
-      <p>I started learning code when I was in my 1st year.I was facinated by seeing websites and wished to create one for myself.Over the time I have gained a wealth of knowledge designing and developing websites and web applications..</p>
+      <p>I started learning code when I was in my 1st year.I was fascinated by seeing websites and wished to create one for myself.Over the time I have gained a wealth of knowledge designing and developing websites and web applications..</p>
     </div>
     <div class="skill-row">
       <img class="guitar-img" src="https://media4.giphy.com/media/LHBn4ciHgWjazDAatU/giphy.webp?cid=ecf05e47qrp4rcqja5k6ebimro9hjdv0it611bhihi3vw0m2&rid=giphy.webp&ct=s" alt="cricket-img">
